--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            Today I Learned
+tagline:          'JS nuggets from an early web dev career'
+description:      'There is a lot I don\'t know, some of it might be of interest to you.'
 url:              http://til.florianpellet.com
 baseurl:          ./
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Florian Pellet'
+  url:            https://florianpellet.com
 
 paginate:         5
 
@@ -22,4 +22,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/sheraff/til
