--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 permalink:        pretty
 
 # Setup
-title:            'Today I Learned'
+title:            TiTlE
 tagline:          'JS nuggets from an early web dev career'
 description:      "There is a lot I don't know, some of it might be of interest to you."
 url:              http://til.florianpellet.com
