--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ tagline:          'JS nuggets from an early web dev career'
 description:      "There is a lot I don't know, some of it might be of interest to you."
 url:              http://til.florianpellet.com
 baseurl:          /
+test:             TheBigQuizz
 
 author:
   name:           'Florian Pellet'
