--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,15 @@ kramdown:
 permalink:        pretty
 
 # Setup
-title:            TiTlE
+title:            Today I Learned
 tagline:          'JS nuggets from an early web dev career'
 description:      >
-  There is a lot I don't know, some of it might be of interest to you.
-  Some of it might not, you decide.
+  I like JS, reading the mozilla doc, diving into github, cramming on google dev blogs... 
+  Here's some of what I learned from it.
 url:              http://til.florianpellet.com
 baseurl:          /
+baseurl2:         ./
+baseurl3:         '.'
 test:             TheBigQuizz
 
 author:
