--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 # Defaults
-
 kramdown:
   input: GFM
   hard_wrap: false
@@ -14,10 +13,7 @@ description:      >
   I like JS, reading the mozilla doc, diving into github, cramming on google dev blogs... 
   Here's some of what I learned from it.
 url:              http://til.florianpellet.com
-baseurl:          /
-baseurl2:         ./
-baseurl3:         '.'
-test:             TheBigQuizz
+baseurl:          ./
 
 author:
   name:           'Florian Pellet'
